fix: fix forms for favorite accounts

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <path d="M264 480A232 232 0 0132 248c0-94 54-178.28 137.61-214.67a16 16 0 0121.06 21.06C181.07 76.43 176 104.66 176 136c0 110.28 89.72 200 200 200 31.34 0 59.57-5.07 81.61-14.67a16 16 0 0121.06 21.06C442.28 426 358 480 264 480z" />
                         </svg>
                     </div>
-                    <button class="button button--small-icon button--shutdown">
+                    <button class="button button--small-icon button--subtle button--mr">
                         <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"><path d="M0 0h24v24H0z" fill="none"/>
                             <path d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"/>
                         </svg>
@@ -348,13 +348,13 @@
                 <p class="favorite-account__number"></p>
             </div>
             <div class="favorite-account__section favorite-account__section--right">
-                <button class="button button--small-icon button--subtle favorite-account__icon-button--edit">
+                <button class="button button--small-icon button--subtle button--edit">
                     <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54z"/>
                     </svg>
                 </button>
-                <button class="button button--small-icon button--subtle button--mr favorite-account__icon-button--delete">
+                <button class="button button--small-icon button--subtle button--mr button--delete">
                     <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
                         <path d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z" fill="none"/>
                         <path d="M292 64h-72a4 4 0 00-4 4v28h80V68a4 4 0 00-4-4z" fill="none"/>
@@ -375,12 +375,12 @@
                 <input class="favorite-account__input favorite-account__input--number" type="text" placeholder="Entrer le numéro du compte" name="number" required minlength="10" maxlength="10" pattern="[0-9]{10}">
             </div>
             <div class="favorite-account__section favorite-account__section--right">
-                <button class="button button--small-icon button--subtle favorite-account__text-button--cancel" type="button">
+                <button class="button button--small-icon button--subtle button--cancel" type="button">
                     <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
                         <path d="M400 145.49L366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49z"/>
                     </svg>
                 </button>
-                <button class="button button--small-icon button--primary button--disabled button--mr button--confirm" type="button">
+                <button class="button button--small-icon button--disabled button--mr button--confirm" type="button">
                     <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/>
