fix: fix favorite accounts inputs

--- a/index.html
+++ b/index.html
@@ -415,10 +415,10 @@
     <template id="favorite-account-edit-template">
         <form class="favorite-account">
             <div class="favorite-account__section favorite-account__section--left">
-                <input class="favorite-account__input favorite-account__input--name" data-name="account-owner" type="text" placeholder="Entrer le nom du compte" name="name" required maxlength="40">
+                <input class="typography typography--title-medium favorite-account__input favorite-account__input--name" data-name="account-owner" type="text" placeholder="Entrer le nom du compte" name="name" required maxlength="40">
             </div>
             <div class="favorite-account__section">
-                <input class="favorite-account__input favorite-account__input--number" data-name="account-number" type="text" placeholder="Entrer le numéro du compte" name="number" required minlength="10" maxlength="10" pattern="[0-9]{10}">
+                <input class="typography typography--number-small favorite-account__input favorite-account__input--number" data-name="account-number" type="text" placeholder="Entrer le numéro du compte" name="number" required minlength="10" maxlength="10" pattern="[0-9]{10}">
             </div>
             <div class="favorite-account__section favorite-account__section--right">
                 <button class="button button--small-icon button--subtle button--cancel" type="button">
