ref: work on dark theme

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
     <!-- Template / favorite account / paste view -->
     <template id="favorite-account-paste-template">
         <div class="favorite-account favorite-account--clickable">
-            <div class="favorite-account__section">
+            <div class="favorite-account__section favorite-account__section--large">
                 <h4 class="typography typography--title-medium typography--mb" data-name="favorite-account-name"></h4>
                 <p class="typography typography--number-small" data-name="favorite-account-number"></p>
             </div>
