fix: fix filter dropdown and log refs

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <div class="toggle-button__handle"></div>
                         </div>
                         <svg class="toggle-button__icon toggle-button__icon--moon">
-                            <use href="#icon-sun" fill="currentColor" />
+                            <use href="#icon-moon" fill="currentColor" />
                         </svg>
                     </div>
                     <button class="icon-button icon-button--medium icon-button--secondary icon-button--secondary-delete icon-button--negative-mr">
@@ -559,20 +559,12 @@
                 <span class="typography typography--number-medium" data-name="log-amount"></span>
             </summary>
             <div class="log__body">
-                <div class="group group--row">
-                    <div class="group__section group__section--fixed group__section--ref">
-                        <h5 class="typography typography--title-small">Référence</h5>
+                <div class="group group--row group--small-gap">
+                    <div class="group__section group__section--fixed">
+                        <h5 class="typography typography--body-small typography--log-ref">Référence:</h5>
                     </div>
                     <div class="group__section group__section--fluid">
-                        <p class="typography typography--body-medium" data-name="log-reference"></p>
-                    </div>
-                </div>
-                <div class="group group--row">
-                    <div class="group__section group__section--fixed group__section--ref">
-                        <h5 class="typography typography--title-small">Compte</h5>
-                    </div>
-                    <div class="group__section group__section--fluid">
-                        <p class="typography typography--body-medium" data-name="log-account">0123456789</p>
+                        <p class="typography typography--body-small" data-name="log-reference"></p>
                     </div>
                 </div>
             </div>
