feat: add tab list

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <app-root>
     <app-bar slot="bar">
       <app-logo slot="logo"></app-logo>
+      <app-tab-list slot="tab-list"></app-tab-list>
     </app-bar>
   </app-root>
 
